--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,6 +37,9 @@ management:
     user: root
     password: rootroot
 
-  redis:
-    host: localhost
-    port: 6379
+cache:
+  host: localhost
+  port: 6379
+  default-ttl: -1
+  caches-ttl:
+    book-expire: 1
