--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     username: root
     password: rootroot
 
+  redis:
+    host: localhost
+    port: 6379
+
 management:
   endpoints:
     web:
@@ -37,9 +41,7 @@ management:
     user: root
     password: rootroot
 
-cache:
-  host: localhost
-  port: 6379
+cache-timeout:
   default-ttl: -1
   caches-ttl:
-    book-expire: 1
+    book-expire: 2
